--- a/views/onboarding.ejs
+++ b/views/onboarding.ejs
@@ -345,7 +345,7 @@
                     showStatus('error', 'Login cancelado ou nao autorizado.');
                 }
             }, {
-                config_id: '<%= metaAppId %>',
+                config_id: '<%= metaConfigId %>',
                 response_type: 'code',
                 override_default_response_type: true,
                 extras: {
